[workspace]
members = [
    "saige-cli",
    "saige-core",
    "saige-geno",
    "saige-linalg",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/saigegit/SAIGE"

[workspace.dependencies]
# Linear algebra
faer = "0.20"
sprs = "0.11"

# Statistics
statrs = "0.18"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"
csv = "1"

# I/O
memmap2 = "0.9"
flate2 = "1"
zstd = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }

# VCF/BCF
noodles = { version = "0.88", features = ["vcf", "bcf", "bgzf"] }

# Parallelism
rayon = "1"

# Random
rand = "0.8"
rand_chacha = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging & progress
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"

# Testing
proptest = "1"

# Byte order
byteorder = "1"

# Numeric traits
num-traits = "0.2"
