[package]
name = "saige-linalg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Linear algebra wrappers for SAIGE-RS"

[dependencies]
faer = { workspace = true }
sprs = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
